"Website Security Status and Permissions" menu gets stuck after selecting an option
Version
- Epiphany version: 45.0, 45.0-41-g877f4dd6+
- Distributor: Flathub, GNOME-Nightly Flatpak
Description
When you click the lock icon in the address bar, you can select a dropdown menu, such as ad blocker, and change the setting. After doing so, clicking outside of the menu, or clicking on the lock icon again will not hide the menu, and it becomes impossible to click on anything else. You need to press the Esc key to close it, which can easily soft lock a phone or tablet.
Steps to reproduce
- Open a website with SSL
- Click the padlock icon in the far left of the address bar
- Click the dropdown for "Advertisements"
- Change it from the default value, ie. "Deny" to "Allow", or vice versa
- Try to close the menu with the mouse or touchscreen. It cannot be done.
Edited by Caden Mitchell