Close security popover after selection

Note: It's safe to drop callback return value as GtkComboBox::changed does not have one.

Fixes: https://gitlab.gnome.org/GNOME/epiphany/-/issues/2215
Part-of: <https://gitlab.gnome.org/GNOME/epiphany/-/merge_requests/1441>